# high-assurance-rust

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  book.toml
code_snippets/chp14/tactical_trust/nonce_typing/: Cargo.toml  build.rs
code_snippets/chp14/tactical_trust/nonce_typing/src/: lib.rs
code_snippets/chp14/tactical_trust/nonce_typing/tests/: encrypt_decrypt.rs
docker_aarch64/: Dockerfile
docs/: 404.html  CNAME  cfp.html  changelog.html  download.html  engage.html  faq.html  index.html  landing.html  license.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
docs/chp1/: _hands_on.html  _index.html  about_the_team.html  challenges.html  how_is_this_book_structured.html  why_this_book.html
docs/chp12/: diff_fuzz_PLACEHOLDER.html
docs/chp14/: tactical_trust_1.html
docs/chp16_appendix/: _index.html  books.html  components.html  crypto.html  icfg.html  mem_hierarch.html  resources.html  tools.html  types.html
docs/chp2/: _hands_on.html  _index.html  cli.html  dynamic_assurance_1.html  dynamic_assurance_2.html  dynamic_assurance_3.html  limits.html  operational_assurance_1.html  operational_assurance_2.html  static_assurance_1.html  static_assurance_2.html  static_vs_dynamic.html
docs/chp3/: _hands_on.html  _index.html  modules.html  rust_1_low_data_rep.html  rust_2_high_data_rep.html  (+6 more)
src/: SUMMARY.md  cfp.md  changelog.md  download.md  engage.md  faq.md  landing.md  license.md
tools/har_analyze/: Cargo.toml
tools/har_analyze/src/: badge.rs  book.rs  main.rs  mod.rs  rules.rs  traits.rs
(+125 files in other folders)
