[package]
name = "har_analyze"
version = "0.1.0"
edition = "2021"
authors = ["Tiemoko Ballo"]
description = "Internal tooling for https://highassurance.rs/"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
color-eyre = "0.6"
rayon = "1"
regex = "1"
separator = "0.4"
scraper = "0.17"
svg = "0.14"
walkdir = "2"

[lib]
name = "har_analyze"
path = "src/mod.rs"

[[bin]]
name = "har_analyze"
path = "src/main.rs"
